Creo componentes CartWidget.js y ItemListContainer.js con sus respectivas funcionalidades y estilos

--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,17 @@
   text-decoration: none;
   color:white;
 }
+
+.contador{
+  margin:5px;
+}
+
+.marca{
+  margin-top:150px;
+  font-size:30px;
+}
+.bienvenida{
+  color:red;
+  font-size: 20px;
+  margin-top:150px;
+}
