Retiro funcionalidad del componente ItemList y se la agrego al componente ItemListContainer.Creo los componentes ItemDetailContainer y ItemDetail con sus respectivas funcionalidades y estilos

--- a/src/App.css
+++ b/src/App.css
@@ -139,3 +139,24 @@
 .tituloProductos{
   margin:50px;
 }
+
+.itemDetail{
+  display:flex;
+  justify-content: center;
+  align-items:center;
+}
+
+.imagenDetalle{
+  width:50%;
+}
+
+.tituloDetalle{
+  margin-bottom:20px;
+}
+.descripcionProducto{
+  margin:20px;
+}
+
+.precioDetalle{
+  margin:20px;
+}
