En componente ItemDetailContainer cambio el array por un objeto.Creo las rutas y la conectividad del sitio utilizando React Router Dom

--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
   height:10vh;
 }
 
-.menuDeNavegacion li a{
+.menuDeNavegacion .links{
   text-decoration: none;
   color:white;
 }
@@ -159,4 +159,8 @@
 
 .precioDetalle{
   margin:20px;
+}
+
+.producto{
+  text-decoration: none;
 }
