Agrego funcionalidad en el componente Counter, y lo sumo al componente ItemDetail realizando su correspondiente funcionalidad

--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,7 @@
   display:flex;
   justify-content: center;
   align-items:center;
+  margin-bottom:40px;
 }
 
 .imagenDetalle{
@@ -164,3 +165,4 @@
 .producto{
   text-decoration: none;
 }
+
