--- a/src/App.css
+++ b/src/App.css
@@ -166,3 +166,30 @@
   text-decoration: none;
 }
 
+.formularioCarrito{
+  display:flex;
+  flex-direction: column;
+}
+
+.cart{
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.cartItem{
+  display:flex;
+  flex-direction:row;
+}
+
+.cartButtons{
+  display:flex;
+  justify-content: center;
+}
+
+.cartItem{
+  display:flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin:10px;
+}
